@@ -1,3 +1,8 @@
+2008-12-19  Thomas Heller  <theller@python.net>
+
+	* Fix property get handling for FUNC_PUREVIRTUAL functions in
+	lazybind.py
+
 2008-12-18  Thomas Heller  <theller@python.net>
 
 	* Fix memoryleak in IEnumVARIANT.
